# carange

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  ONBOARDING_EVALUATION.md  PRODUCT_PLAN.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.pg.yml  docker-compose.yml  main.py  pyproject.toml  release-please-config.json  requirements.txt  ruff.toml  ui_lint.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  release-please.yaml
alembic/: env.py
alembic/versions/: 0001_baseline_schema.py  0002_wealth_building_flag_soft_delete.py  0003_p0_dashboard_indexes.py  0004_savings_interest_split.py  0005_fix_null_created_at.py  0006_normalize_enum_case.py  0007_normalize_enum_case_remaining.py  0009_rules_payees.py  (+22 more)
app/: middleware.py
docs/: FEATURES.md
email_worker/: Dockerfile  README.md  email_parser.py  learned_patterns.py  processor.py  requirements.txt  worker.py
migrations/: 001_add_import_jobs.py  002_rename_khac_categories.py  002_soft_delete_transactions.py
notify_worker/: Dockerfile  README.md  worker.py
ocr_worker/: Dockerfile  README.md  learned_parser_store.py  ocr.py  processor.py  requirements.txt  source_detector.py  types.py  worker.py
scripts/: run.sh  setup-autostart.sh
tests/: conftest.py  test_assets.py  test_assets_ext.py  test_budget.py  test_budget_alerts.py  test_budget_context.py  test_budget_ext.py  test_cadence.py  test_categories.py  test_categories_ext.py  test_coverage_gaps.py  test_coverage_targeted.py  test_currency_format.py  test_dashboard.py  test_dashboard_ext.py  test_dashboard_layout.py  test_email_parsers.py  test_fiscal_kpi.py  test_fiscal_period.py  test_forecast_api.py  test_forecast_service.py  test_fragment_budget_chip.py  test_fragment_budget_context.py  test_fragment_budget_preview.py  test_fragments.py  test_fragments_payees_projects.py  test_fragments_tx_filters.py  test_import_jobs.py  test_insight_service.py  test_kpi_terms.py  test_learned_parsers.py  test_learned_parsers_router.py  test_llm_features.py  test_notes.py  test_notification_service.py  test_notify_worker.py  test_ocr_parsers.py  test_ocr_worker.py  test_payment_settle.py  test_phase1_features.py  (+25 more)
utils/: add_indexes.py
(+136 files in other folders)
