[project]
name = "carange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.18.4",
    "fastapi==0.136.1",
    "jinja2==3.1.6",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.28",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "uvicorn[standard]==0.47.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]
