[project]
name = "carange"
version = "0.2.1"
description = "Self-hosted family finance tracker — FastAPI + SQLite/PostgreSQL with OCR and email transaction ingestion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.18.4",
    "beautifulsoup4==4.15.0",
    "fastapi==0.137.1",
    "imapclient==3.1.0",
    "jinja2==3.1.6",
    "lxml==6.1.1",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "requests==2.34.2",
    "sqlalchemy==2.0.50",
    "starlette==1.3.1",
    "uvicorn[standard]==0.49.0",
    "idna>=3.15",
    "mako>=1.3.12",
]

[dependency-groups]
dev = [
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]
